Fix scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,17 @@
+html, body, #root, .content__container {
+    height:100%;
+}
+
 body {
     background-color: #eff3f7;
+    overflow: hidden;
 }
 
 .App {
     font-family: 'Source Code Pro', monospace;
     color: #333;
     line-height: 1.6;
+    height: 100%;
 }
 
 .app__header {
@@ -63,5 +69,9 @@ body {
 .cart_and_name {
     display: flex;
     align-items: center;
+}
+
+.content__container {
+    overflow-y: auto;
 }
 
