--- a/src/components/ProductCard/ProductCard.css
+++ b/src/components/ProductCard/ProductCard.css
@@ -1,7 +1,6 @@
 .product-card {
     padding-bottom: 10px;
     width: 940px;
-    background-color: #fff;
     border-bottom: 1px solid #ddd;
     border-radius: 4px;
     margin-bottom: 10px;
